Fixing OLTP and GRAPH workload for Janus