@@ -2,7 +2,11 @@ package com.benchmark.client;
 
 import com.benchmark.generator.QueryLanguage;
 import com.benchmark.generator.QueryTemplate;
-import org.apache.tinkerpop.gremlin.driver.*;
+import org.apache.tinkerpop.gremlin.driver.Client;
+import org.apache.tinkerpop.gremlin.driver.Cluster;
+import org.apache.tinkerpop.gremlin.driver.Result;
+import org.apache.tinkerpop.gremlin.driver.ResultSet;
+import org.apache.tinkerpop.gremlin.driver.exception.ResponseException;
 
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -29,32 +33,42 @@ public class JanusGraphClient implements DatabaseClient, AutoCloseable {
         this.client = cluster.connect();
     }
 
-    /** Generic GREMLIN submit (used by executePrepared and fetchSampleIds) */
+    /** Generic GREMLIN submit (used by executePrepared and fetchSampleIds). */
     @Override
     public List<Map<String, Object>> executeQuery(String script, Map<String, Object> params) {
         try {
-            Map<String, Object> bindings = (params == null) ? Map.of() : params;
-            ResultSet rs = client.submit(script, bindings);
-            List<Result> all = rs.all().get(60, TimeUnit.SECONDS);
+            Map<String, Object> bindings = (params == null) ? Collections.emptyMap() : params;
+            ResultSet rset = client.submit(script, bindings);
 
+            List<Result> all = rset.all().get(60, TimeUnit.SECONDS);
             List<Map<String, Object>> out = new ArrayList<>(all.size());
+
             for (Result r : all) {
                 Object o = r.getObject();
-                if (o instanceof Map<?,?> m) {
+                // Unwrap Optional if server returns Optional<T>
+                if (o instanceof Optional<?> opt) {
+                    o = opt.orElse(null);
+                }
+                if (o instanceof Map<?, ?> mm) {
                     @SuppressWarnings("unchecked")
-                    Map<String,Object> mm = (Map<String,Object>) m;
-                    out.add(mm);
+                    Map<String, Object> cast = (Map<String, Object>) mm;
+                    out.add(cast);
                 } else {
                     out.add(Map.of("value", o));
                 }
             }
             return out;
+        } catch (ResponseException re) {
+            // Print remote error details to help diagnose label/prop issues
+            String msg = re.getMessage();
+            String remote = (re.getRemoteStackTrace() == null) ? "" : ("\nRemote stack:\n" + re.getRemoteStackTrace());
+            throw new RuntimeException("Gremlin submit failed: " + msg + remote, re);
         } catch (Exception e) {
             throw new RuntimeException("Gremlin submit failed", e);
         }
     }
 
-    /** IMPORTANT: JanusGraph must handle GREMLIN prepared queries. */
+    /** JanusGraph must handle GREMLIN prepared queries. */
     @Override
     public List<Map<String, Object>> executePrepared(QueryTemplate.PreparedQuery pq) {
         if (pq.lang == QueryLanguage.GREMLIN) {
@@ -67,14 +81,21 @@ public class JanusGraphClient implements DatabaseClient, AutoCloseable {
     public List<String> fetchSampleIds(String label, String idProperty) {
         // Keep it simple & capped
         String script = "g.V().hasLabel(label).values(idProp).dedup().limit(cap)";
-        Map<String, Object> bindings = Map.of("label", label, "idProp", idProperty, "cap", 1_000);
+        Map<String, Object> bindings = Map.of(
+                "label", label,
+                "idProp", idProperty,
+                "cap", 1_000
+        );
 
         List<Map<String, Object>> rows = executeQuery(script, bindings);
-        // For scalar values we put them under key "value" in executeQuery
         List<String> out = new ArrayList<>(rows.size());
-        for (Map<String,Object> m : rows) {
+        for (Map<String, Object> m : rows) {
             Object v = m.get("value");
-            if (v != null) out.add(String.valueOf(v));
+            if (v instanceof Optional<?> opt) v = opt.orElse(null);
+            if (v != null) {
+                String s = String.valueOf(v);
+                if (!s.isBlank()) out.add(s);
+            }
         }
         return out;
     }
